Removed poor sets from set logic
git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/trunk@4793 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -84,7 +84,7 @@ exposure:
 
 set:
     excellentSeeing: 1.5
-    poorSeeing: 2
+    goodSeeing: 2
     maxHARange: 15
     maxSeeingRange: 0.8
     maxSN2Factor: 2
