--- a/defaults.yaml
+++ b/defaults.yaml
@@ -89,6 +89,7 @@ set:
     maxSeeingRange: 0.8
     maxSN2Factor: 2
     ditherPositions: ['N', 'S', 'E']
+    useHAmidPoint: False
 
 setArrangement:
     exposureLimit: 15
