Totoro: updated schedule file. Now uses the autoscheduler if available
git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/trunk@4828 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -35,7 +35,7 @@ dbConnectionTunnel: &dbConnectionTunnel
 dbConnection: *dbConnectionProduction
 
 observingPlan:
-    schedule: +../../../../schedules/Sch_base.6yrs.txt.frm.dat
+    schedule: +data/Sch_base.6yrs.txt.frm.dat
 
 fields:
     tilingCatalogue: $MANGA_TILING_CATALOGUE
