--- a/defaults.yaml
+++ b/defaults.yaml
@@ -35,7 +35,8 @@ dbConnectionTunnel: &dbConnectionTunnel
 dbConnection: *dbConnectionProduction
 
 observingPlan:
-    schedule: +data/Sch_base.6yrs.txt.frm.dat
+    schedule: None
+    fallBackSchedule: +data/Sch_base.6yrs.txt.frm.dat
 
 fields:
     tilingCatalogue: $MANGA_TILING_CATALOGUE
