--- a/defaults.yaml
+++ b/defaults.yaml
@@ -40,6 +40,7 @@ observingPlan:
 
 fields:
     tilingCatalogue: $MANGA_TILING_CATALOGUE
+    drilledTiles: +data/drilledMaNGATiles.dat
 
 observatory:
     longitude: 254.179722   # In East degrees
@@ -54,9 +55,8 @@ dustMap:
     grid: +data/IGincrease.fits
 
 planner:
-    nCarts: 4
-    efficiency: 0.85
-    maxLeftoverTime: 900.
+    nCarts: 6
+    efficiency: 0.9
 
 plugger:
     nCarts: 2
@@ -81,16 +81,16 @@ exposure:
     exposureTime: 900
     minExpTime: 899
     maxSeeing: 2.5
+    maxAltitude: 80
     validDitherPositions: ['N', 'S', 'E']
 
 set:
     excellentSeeing: 1.5
     goodSeeing: 2
-    maxHARange: 15
+    maxHARange: 15.
     maxSeeingRange: 0.8
     maxSN2Factor: 2
     ditherPositions: ['N', 'S', 'E']
-    useHAmidPoint: False
 
 setArrangement:
     exposureLimit: 15
