Totoro: rewrite of the planner and various fixes and bugs
git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/trunk@5544 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -56,6 +56,8 @@ dustMap:
 
 planner:
     efficiency: 0.9
+    tilesBeingDrilled: +data/tilesBeingDrilled.dat
+    platesIgnore: +data/platesIgnore.dat
 
 plugger:
     efficiency: 0.80
