Totoro: functional plugger
git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/trunk@5754 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -60,8 +60,8 @@ planner:
     platesIgnore: +data/platesIgnore.dat
 
 plugger:
-    efficiency: 0.90
-    maxLeftoverTime: 900.
+    efficiency: 0.9
+    noPlugPriority: 2
     forcePlugPriority: 10
     defaultPriority: 5
 
