Totoro: few changes to the set rearrangement routines
git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/trunk@5755 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -94,7 +94,7 @@ set:
     ditherPositions: ['N', 'S', 'E']
 
 setArrangement:
-    exposureLimit: 15
+    permutationLimit: 600000
     forceRearrangementMinExposures: 3
 
 carts: [1, 2, 3, 4]
