solving merge conflicts
git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/trunk@5907 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -2,7 +2,8 @@
 logging:
     logLevel: INFO
     logFileLevel: DEBUG
-    logFilePath: '~/.totoro/totoro.log'
+    logFilePath: ~/.totoro/totoro.log
+    mode: append
 
 dbConnectionProduction: &dbConnectionProduction
     user: sdssdb_admin
