Totoro: improvements the set rearrangement routine.
- Plate.rearrangeSets now accepts a new keyword LST that controls
the rearrangement. If LST is False, the incomplete set is moved at the
beginning of the plate visibility window. If None, it is moved as
close to the current LST as possible. If LST is a float, the
incomplete set is moved as close to that LST as possible.

- Exposure.getPlugging is now cached, which improves the running time
a bit.

- Plate.getLSTRange accepts again the intercept and mjd keywords.

- A new script in helpers (rearrangeSets.py) can be used to rearrange
a plate easily.

git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/trunk@6260 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -94,6 +94,7 @@ set:
     maxHARange: 15.
     maxSeeingRange: 0.8
     maxSN2Factor: 2
+    setRearrangementFactor: 0.9
     ditherPositions: ['N', 'S', 'E']
 
 setArrangement:
