Totoro: planner now skips fields without allocated targets.
git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/trunk@7307 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -43,7 +43,8 @@ observingPlan:
 fields:
     tilingCatalogue: $MANGA_TILING_CATALOGUE
     mangacore: $MANGACORE_DIR
-    drilledTiles: +data/drilledMaNGATiles.dat
+    tilesBeingDrilled: +data/tilesBeingDrilled.dat
+    scienceCatalogue: $MANGASAMPLE_SCIENCE_CATALOGUE
 
 observatory:
     longitude: 254.179722   # In East degrees
@@ -59,17 +60,17 @@ dustMap:
 
 planner:
     efficiency: 0.8
-    tilesBeingDrilled: +data/tilesBeingDrilled.dat
+
     platesIgnore: +data/platesIgnore.dat
     maxAltitude: 75
-    noPlugPriority: 2
+    noPlugPriority: 1
     forcePlugPriority: 10
     goodWeatherFraction: 0.45
     seed: 12345
 
 plugger:
     efficiency: 0.8
-    noPlugPriority: 2
+    noPlugPriority: 1
     forcePlugPriority: 10
     maxAltitude: 80,
     onlyVisiblePlates: true
