Totoro: updated dbConnectionDev configuration
git-svn-id: https://svn.sdss.org/repo/sdss/sdss_python_module/branches/josedev@64890 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -30,7 +30,7 @@ dbConnectionTest: &dbConnectionTest
 dbConnectionDev: &dbConnectionDev
     user: sdssdb_admin
     password: 4-photometry
-    host: localhost
+    host: sdss4-db
     port: 5440
     database: apo_platedb
 
