Totoro: added factor weighting with next night's window length
git-svn-id: https://svn.sdss.org/repo/sdss/sdss_python_module/branches/josedev@65384 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -65,6 +65,11 @@ dustMap:
     maps: [SFD_dust_4096_ngp.fits, SFD_dust_4096_sgp.fits]
     grid: +data/IGincrease.fits
 
+scheduling:
+    patchSetFactor: 0.1
+    platePriorityFactor: 0.25
+    nextNightFactor: 0.5
+
 planner:
     efficiency: 0.8
     maxAltitude: 80
