--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SDSSconnect"]
-	path = Totoro/SDSSconnect
+	path = Totoro/external/SDSSconnect
 	url = git@github.com:albireox/SDSSconnect.git
