--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,56 @@
 /.py[cod]
 /.pydevproject
 /.tox
+GITS/*.egg
+GITS/*.egg-info
+GITS/*.mo
+GITS/*.so
+GITS/*.sublime*
+GITS/.coverage
+GITS/.installed.cfg
+GITS/.mr.developer.cfg
+GITS/.project
+GITS/.py[cod]
+GITS/.pydevproject
+GITS/.tox
+GITS/__pycache__
+GITS/bin
+GITS/build
+GITS/core/*.egg
+GITS/core/*.egg-info
+GITS/core/*.mo
+GITS/core/*.so
+GITS/core/*.sublime*
+GITS/core/.coverage
+GITS/core/.installed.cfg
+GITS/core/.mr.developer.cfg
+GITS/core/.project
+GITS/core/.py[cod]
+GITS/core/.pydevproject
+GITS/core/.tox
+GITS/core/__pycache__
+GITS/core/bin
+GITS/core/build
+GITS/core/develop-eggs
+GITS/core/dist
+GITS/core/eggs
+GITS/core/lib
+GITS/core/lib64
+GITS/core/nosetests.xml
+GITS/core/parts
+GITS/core/pip-log.txt
+GITS/core/sdist
+GITS/core/var
+GITS/develop-eggs
+GITS/dist
+GITS/eggs
+GITS/lib
+GITS/lib64
+GITS/nosetests.xml
+GITS/parts
+GITS/pip-log.txt
+GITS/sdist
+GITS/var
 /__pycache__
 /bin
 /build
