--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
 * text=auto !eol
+GITS/__init__.py -text
+GITS/core/__init__.py -text
+GITS/core/core.py -text
+GITS/exceptions.py -text
+GITS/version.py -text
