Changed project name

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,31 @@
 * text=auto !eol
-GITS/__init__.py -text
-GITS/core/__init__.py -text
-GITS/core/core.py -text
-GITS/exceptions.py -text
-GITS/version.py -text
 /README.md -text
+Totoro/__init__.py -text
+Totoro/core/__init__.py -text
+Totoro/core/colourPrint.py -text
+Totoro/core/configuration.py -text
+Totoro/core/logger.py -text
+Totoro/core/setupTools.py -text
+Totoro/exceptions.py -text
+Totoro/helpers/__init__.py -text
+Totoro/helpers/addTiles.py -text
+Totoro/helpers/addTiles.py.bak -text
+Totoro/helpers/createWorkableDB.py -text
+Totoro/helpers/mangaDB.sql -text
+Totoro/helpers/plateDB_Test.dump -text
+Totoro/plateDB/PlateDB.py.bak -text
+Totoro/plateDB/__init__.py -text
+Totoro/plateDB/connection.py -text
+Totoro/plateDB/dataModel.py -text
+Totoro/plateDB/queries.py -text
+Totoro/scheduler/__init__.py -text
+Totoro/scheduler/nightly.D.txt -text
+Totoro/scheduler/nightly.D_UTC.txt -text
+Totoro/scheduler/observingPlan.py -text
+Totoro/scheduler/scheduler.py -text
+Totoro/tests/__init__.py -text
+Totoro/tests/testPlanner.py -text
+Totoro/utils/__init__.py -text
+Totoro/utils/conversion.py -text
+Totoro/version.py -text
+/setup.py -text
