Added classes for Set, Field, Exposure, defaults and others.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,8 +4,12 @@ Totoro/__init__.py -text
 Totoro/core/__init__.py -text
 Totoro/core/colourPrint.py -text
 Totoro/core/configuration.py -text
+Totoro/core/defaults.py -text
 Totoro/core/logger.py -text
 Totoro/core/setupTools.py -text
+Totoro/data/IGincrease.fits -text
+Totoro/data/nightly.D.txt -text
+Totoro/data/nightly.D_UTC.txt -text
 Totoro/exceptions.py -text
 Totoro/helpers/__init__.py -text
 Totoro/helpers/addTiles.py -text
@@ -19,11 +23,17 @@ Totoro/plateDB/connection.py -text
 Totoro/plateDB/dataModel.py -text
 Totoro/plateDB/queries.py -text
 Totoro/scheduler/__init__.py -text
+Totoro/scheduler/exposure.py -text
+Totoro/scheduler/fields.py -text
 Totoro/scheduler/observingPlan.py -text
 Totoro/scheduler/scheduler.py -text
+Totoro/scheduler/set.py -text
 Totoro/tests/__init__.py -text
 Totoro/tests/testPlanner.py -text
 Totoro/utils/__init__.py -text
+Totoro/utils/ccmUnred.py -text
 Totoro/utils/conversion.py -text
+Totoro/utils/dustMap.py -text
+Totoro/utils/plateUtils.py -text
 Totoro/version.py -text
 /setup.py -text
