--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,32 @@ Totoro/core/parts
 Totoro/core/pip-log.txt
 Totoro/core/sdist
 Totoro/core/var
-Totoro/data
+Totoro/data/*.egg
+Totoro/data/*.egg-info
+Totoro/data/*.mo
+Totoro/data/*.so
+Totoro/data/*.sublime*
+Totoro/data/.bak
+Totoro/data/.coverage
+Totoro/data/.installed.cfg
+Totoro/data/.mr.developer.cfg
+Totoro/data/.project
+Totoro/data/.py[cod]
+Totoro/data/.pydevproject
+Totoro/data/.tox
+Totoro/data/__pycache__
+Totoro/data/bin
+Totoro/data/build
+Totoro/data/develop-eggs
+Totoro/data/dist
+Totoro/data/eggs
+Totoro/data/lib
+Totoro/data/lib64
+Totoro/data/nosetests.xml
+Totoro/data/parts
+Totoro/data/pip-log.txt
+Totoro/data/sdist
+Totoro/data/var
 Totoro/develop-eggs
 Totoro/dist
 Totoro/eggs
@@ -83,6 +108,7 @@ Totoro/helpers/parts
 Totoro/helpers/pip-log.txt
 Totoro/helpers/sdist
 Totoro/helpers/var
+Totoro/ignore
 Totoro/lib
 Totoro/lib64
 Totoro/nosetests.xml
