Totoro: fixed bug with schedule file

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ core/logger.py -text
 core/setupTools.py -text
 data/FinalSchedAPO.dat -text
 data/Sch_base.6yrs.txt.frm.dat -text
+data/drilledMaNGATiles.dat -text
 data/finalTilingCatalogue_v0.5.fits -text
 data/tmpSchedule.dat -text
 dbclasses/__init__.py -text
@@ -35,6 +36,7 @@ output/tabularOutput.py -text
 /readPath.py -text
 scheduler/__init__.py -text
 scheduler/observingPlan.py -text
+scheduler/plugger.py -text
 scheduler/scheduler.py -text
 scheduler/timeline.py -text
 tests/__init__.py -text
@@ -46,6 +48,7 @@ tests/testOutput.py -text
 tests/testPlanner.py -text
 tests/testPlugger.py -text
 tests/unitTestPlates.py -text
+tests/unitTestPlugger.py -text
 tests/unitTestSets.py -text
 utils/__init__.py -text
 utils/intervals.py -text
