Squashed commit of the following:
commit 69cfad34e3a3cac5452b80ab008476f5b35c94fa
Merge: ffd06d1 0390b40
Author: José R. Sánchez-Gallego <j.sanchezgallego@uky.edu>
Date:   Sat Nov 15 17:09:47 2014 -0500

    Merge branch 'master' into TotoroBeta

commit ffd06d19cc1e02a5bba041ff865a8e2fdab6701c
Author: j.sanchezgallego <j.sanchezgallego@acfa968b-e9c4-4993-a9e6-846a59bbf143>
Date:   Sat Nov 15 22:09:09 2014 +0000

    Totoro: moved mangaPluggingRequest to bin directory

    git-svn-id: https://svn.sdss.org/repo/survey_software/sdss_python_module/branches/TotoroBeta@5803 acfa968b-e9c4-4993-a9e6-846a59bbf143

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 /README.md -text
 /__init__.py -text
 /apoDB.py -text
+bin/mangaPluggingRequest.py -text
 core/__init__.py -text
 core/colourPrint.py -text
 core/configuration.py -text
