Totoro: plugger now return only MaNGA plates. Other minor changes.

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /__init__.py -text
 /apoDB.py -text
 bin/mangaPluggingRequest.py -text
+bin/rearrangeSets.py -text
 core/__init__.py -text
 core/colourPrint.py -text
 core/configuration.py -text
