preparing files for moving to GitHub

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,42 +1,42 @@
 * text=auto !eol
-/README.md -text
-/__init__.py -text
-/apoDB.py -text
-bin/__init__.py -text
-bin/autoAssignPlatePriorities.py -text
-bin/loadMangaPlates.py -text
-bin/mangaPluggingRequest.py -text
-bin/overrideSet.py -text
-bin/rearrangeSets.py -text
-core/__init__.py -text
-core/colourPrint.py -text
-core/configuration.py -text
-core/logger.py -text
-data/Sch_base.6yrs.txt.frm.dat -text
-data/specialPlates.dat -text
-dbclasses/__init__.py -text
-dbclasses/exposure.py -text
-dbclasses/field.py -text
-dbclasses/plate.py -text
-dbclasses/plate_utils.py -text
-dbclasses/set.py -text
-/defaults.yaml -text
-/exceptions.py -text
-/readPath.py -text
-scheduler/__init__.py -text
-scheduler/observingPlan.py -text
-scheduler/planner.py -text
-scheduler/plugger.py -text
-scheduler/scheduler_utils.py -text
-scheduler/timeline.py -text
-tests/__init__.py -text
-tests/bin/__init__.py -text
-tests/bin/testOverrideSet.py -text
-tests/runTests.py -text
-tests/testPlates.py -text
-tests/testPlugger.py -text
-tests/testSetArrangement.py -text
-tests/testSets.py -text
-utils/__init__.py -text
-utils/intervals.py -text
-utils/utils.py -text
+Totoro/README.md -text
+Totoro/__init__.py -text
+Totoro/apoDB.py -text
+Totoro/bin/__init__.py -text
+Totoro/bin/autoAssignPlatePriorities.py -text
+Totoro/bin/loadMangaPlates.py -text
+Totoro/bin/mangaPluggingRequest.py -text
+Totoro/bin/overrideSet.py -text
+Totoro/bin/rearrangeSets.py -text
+Totoro/core/__init__.py -text
+Totoro/core/colourPrint.py -text
+Totoro/core/configuration.py -text
+Totoro/core/logger.py -text
+Totoro/data/Sch_base.6yrs.txt.frm.dat -text
+Totoro/data/specialPlates.dat -text
+Totoro/dbclasses/__init__.py -text
+Totoro/dbclasses/exposure.py -text
+Totoro/dbclasses/field.py -text
+Totoro/dbclasses/plate.py -text
+Totoro/dbclasses/plate_utils.py -text
+Totoro/dbclasses/set.py -text
+Totoro/defaults.yaml -text
+Totoro/exceptions.py -text
+Totoro/readPath.py -text
+Totoro/scheduler/__init__.py -text
+Totoro/scheduler/observingPlan.py -text
+Totoro/scheduler/planner.py -text
+Totoro/scheduler/plugger.py -text
+Totoro/scheduler/scheduler_utils.py -text
+Totoro/scheduler/timeline.py -text
+Totoro/tests/__init__.py -text
+Totoro/tests/bin/__init__.py -text
+Totoro/tests/bin/testOverrideSet.py -text
+Totoro/tests/runTests.py -text
+Totoro/tests/testPlates.py -text
+Totoro/tests/testPlugger.py -text
+Totoro/tests/testSetArrangement.py -text
+Totoro/tests/testSets.py -text
+Totoro/utils/__init__.py -text
+Totoro/utils/intervals.py -text
+Totoro/utils/utils.py -text
