moved SDSSconnect to external directory

--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,31 @@ Totoro/dbclasses/var
 Totoro/develop-eggs
 Totoro/dist
 Totoro/eggs
+Totoro/external/*.egg
+Totoro/external/*.egg-info
+Totoro/external/*.mo
+Totoro/external/*.so
+Totoro/external/*.sublime*
+Totoro/external/.bak
+Totoro/external/.coverage
+Totoro/external/.installed.cfg
+Totoro/external/.mr.developer.cfg
+Totoro/external/.project
+Totoro/external/.py[cod]
+Totoro/external/.pydevproject
+Totoro/external/.tox
+Totoro/external/__pycache__
+Totoro/external/build
+Totoro/external/develop-eggs
+Totoro/external/dist
+Totoro/external/eggs
+Totoro/external/lib
+Totoro/external/lib64
+Totoro/external/nosetests.xml
+Totoro/external/parts
+Totoro/external/pip-log.txt
+Totoro/external/sdist
+Totoro/external/var
 Totoro/ignore
 Totoro/lib
 Totoro/lib64
