better implementation of model classes and relationships

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,11 @@ SDSSconnect/LICENSE -text
 SDSSconnect/README.md -text
 SDSSconnect/SDSSconnect/DatabaseConnect.py -text
 SDSSconnect/SDSSconnect/__init__.py -text
-SDSSconnect/SDSSconnect/plateDB.py -text
+SDSSconnect/SDSSconnect/etc/repr.dat -text
+SDSSconnect/SDSSconnect/exceptions.py -text
+SDSSconnect/SDSSconnect/models/__init__.py -text
+SDSSconnect/SDSSconnect/models/mangaDB.py -text
+SDSSconnect/SDSSconnect/models/plateDB.py -text
+SDSSconnect/SDSSconnect/models/utils.py -text
 SDSSconnect/SDSSconnect/tests/__init__.py -text
 SDSSconnect/SDSSconnect/tests/test_DatabaseConnect.py -text
