--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,56 @@ SDSSconnect/SDSSconnect/build
 SDSSconnect/SDSSconnect/develop-eggs
 SDSSconnect/SDSSconnect/dist
 SDSSconnect/SDSSconnect/eggs
+SDSSconnect/SDSSconnect/etc/*.egg
+SDSSconnect/SDSSconnect/etc/*.egg-info
+SDSSconnect/SDSSconnect/etc/*.mo
+SDSSconnect/SDSSconnect/etc/*.so
+SDSSconnect/SDSSconnect/etc/*.sublime*
+SDSSconnect/SDSSconnect/etc/.coverage
+SDSSconnect/SDSSconnect/etc/.installed.cfg
+SDSSconnect/SDSSconnect/etc/.mr.developer.cfg
+SDSSconnect/SDSSconnect/etc/.project
+SDSSconnect/SDSSconnect/etc/.py[cod]
+SDSSconnect/SDSSconnect/etc/.pydevproject
+SDSSconnect/SDSSconnect/etc/.tox
+SDSSconnect/SDSSconnect/etc/__pycache__
+SDSSconnect/SDSSconnect/etc/build
+SDSSconnect/SDSSconnect/etc/develop-eggs
+SDSSconnect/SDSSconnect/etc/dist
+SDSSconnect/SDSSconnect/etc/eggs
+SDSSconnect/SDSSconnect/etc/lib
+SDSSconnect/SDSSconnect/etc/lib64
+SDSSconnect/SDSSconnect/etc/nosetests.xml
+SDSSconnect/SDSSconnect/etc/parts
+SDSSconnect/SDSSconnect/etc/pip-log.txt
+SDSSconnect/SDSSconnect/etc/sdist
+SDSSconnect/SDSSconnect/etc/var
 SDSSconnect/SDSSconnect/lib
 SDSSconnect/SDSSconnect/lib64
+SDSSconnect/SDSSconnect/models/*.egg
+SDSSconnect/SDSSconnect/models/*.egg-info
+SDSSconnect/SDSSconnect/models/*.mo
+SDSSconnect/SDSSconnect/models/*.so
+SDSSconnect/SDSSconnect/models/*.sublime*
+SDSSconnect/SDSSconnect/models/.coverage
+SDSSconnect/SDSSconnect/models/.installed.cfg
+SDSSconnect/SDSSconnect/models/.mr.developer.cfg
+SDSSconnect/SDSSconnect/models/.project
+SDSSconnect/SDSSconnect/models/.py[cod]
+SDSSconnect/SDSSconnect/models/.pydevproject
+SDSSconnect/SDSSconnect/models/.tox
+SDSSconnect/SDSSconnect/models/__pycache__
+SDSSconnect/SDSSconnect/models/build
+SDSSconnect/SDSSconnect/models/develop-eggs
+SDSSconnect/SDSSconnect/models/dist
+SDSSconnect/SDSSconnect/models/eggs
+SDSSconnect/SDSSconnect/models/lib
+SDSSconnect/SDSSconnect/models/lib64
+SDSSconnect/SDSSconnect/models/nosetests.xml
+SDSSconnect/SDSSconnect/models/parts
+SDSSconnect/SDSSconnect/models/pip-log.txt
+SDSSconnect/SDSSconnect/models/sdist
+SDSSconnect/SDSSconnect/models/var
 SDSSconnect/SDSSconnect/nosetests.xml
 SDSSconnect/SDSSconnect/parts
 SDSSconnect/SDSSconnect/pip-log.txt
