--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 SDSSconnect/DatabaseConnect.py -text
+SDSSconnect/DatabaseConnection.py -text
 SDSSconnect/LICENSE -text
 SDSSconnect/README.md -text
 SDSSconnect/__init__.py -text
