--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,13 @@
 * text=auto !eol
-SDSSconnect/DatabaseConnection.py -text
 SDSSconnect/LICENSE -text
 SDSSconnect/README.md -text
-SDSSconnect/__init__.py -text
-SDSSconnect/etc/repr.dat -text
-SDSSconnect/exceptions.py -text
-SDSSconnect/models/__init__.py -text
-SDSSconnect/models/mangaDB.py -text
-SDSSconnect/models/plateDB.py -text
-SDSSconnect/models/utils.py -text
-SDSSconnect/tests/__init__.py -text
-SDSSconnect/tests/test_DatabaseConnect.py -text
+SDSSconnect/SDSSconnect/DatabaseConnect.py -text
+SDSSconnect/SDSSconnect/__init__.py -text
+SDSSconnect/SDSSconnect/etc/repr.dat -text
+SDSSconnect/SDSSconnect/exceptions.py -text
+SDSSconnect/SDSSconnect/models/__init__.py -text
+SDSSconnect/SDSSconnect/models/mangaDB.py -text
+SDSSconnect/SDSSconnect/models/plateDB.py -text
+SDSSconnect/SDSSconnect/models/utils.py -text
+SDSSconnect/SDSSconnect/tests/__init__.py -text
+SDSSconnect/SDSSconnect/tests/test_DatabaseConnect.py -text
