added EUPS table

--- a/.gitignore
+++ b/.gitignore
@@ -248,4 +248,29 @@ Totoro/var
 /parts
 /pip-log.txt
 /sdist
+ups/*.egg
+ups/*.egg-info
+ups/*.mo
+ups/*.so
+ups/*.sublime*
+ups/.bak
+ups/.coverage
+ups/.installed.cfg
+ups/.mr.developer.cfg
+ups/.project
+ups/.py[cod]
+ups/.pydevproject
+ups/.tox
+ups/__pycache__
+ups/build
+ups/develop-eggs
+ups/dist
+ups/eggs
+ups/lib
+ups/lib64
+ups/nosetests.xml
+ups/parts
+ups/pip-log.txt
+ups/sdist
+ups/var
 /var
