flattened SDSSconnect structure

--- a/.gitignore
+++ b/.gitignore
@@ -24,117 +24,92 @@ SDSSconnect/.project
 SDSSconnect/.py[cod]
 SDSSconnect/.pydevproject
 SDSSconnect/.tox
-SDSSconnect/SDSSconnect/*.egg
-SDSSconnect/SDSSconnect/*.egg-info
-SDSSconnect/SDSSconnect/*.mo
-SDSSconnect/SDSSconnect/*.so
-SDSSconnect/SDSSconnect/*.sublime*
-SDSSconnect/SDSSconnect/.bak
-SDSSconnect/SDSSconnect/.coverage
-SDSSconnect/SDSSconnect/.installed.cfg
-SDSSconnect/SDSSconnect/.mr.developer.cfg
-SDSSconnect/SDSSconnect/.project
-SDSSconnect/SDSSconnect/.py[cod]
-SDSSconnect/SDSSconnect/.pydevproject
-SDSSconnect/SDSSconnect/.tox
-SDSSconnect/SDSSconnect/__pycache__
-SDSSconnect/SDSSconnect/build
-SDSSconnect/SDSSconnect/develop-eggs
-SDSSconnect/SDSSconnect/dist
-SDSSconnect/SDSSconnect/eggs
-SDSSconnect/SDSSconnect/etc/*.egg
-SDSSconnect/SDSSconnect/etc/*.egg-info
-SDSSconnect/SDSSconnect/etc/*.mo
-SDSSconnect/SDSSconnect/etc/*.so
-SDSSconnect/SDSSconnect/etc/*.sublime*
-SDSSconnect/SDSSconnect/etc/.bak
-SDSSconnect/SDSSconnect/etc/.coverage
-SDSSconnect/SDSSconnect/etc/.installed.cfg
-SDSSconnect/SDSSconnect/etc/.mr.developer.cfg
-SDSSconnect/SDSSconnect/etc/.project
-SDSSconnect/SDSSconnect/etc/.py[cod]
-SDSSconnect/SDSSconnect/etc/.pydevproject
-SDSSconnect/SDSSconnect/etc/.tox
-SDSSconnect/SDSSconnect/etc/__pycache__
-SDSSconnect/SDSSconnect/etc/build
-SDSSconnect/SDSSconnect/etc/develop-eggs
-SDSSconnect/SDSSconnect/etc/dist
-SDSSconnect/SDSSconnect/etc/eggs
-SDSSconnect/SDSSconnect/etc/lib
-SDSSconnect/SDSSconnect/etc/lib64
-SDSSconnect/SDSSconnect/etc/nosetests.xml
-SDSSconnect/SDSSconnect/etc/parts
-SDSSconnect/SDSSconnect/etc/pip-log.txt
-SDSSconnect/SDSSconnect/etc/sdist
-SDSSconnect/SDSSconnect/etc/var
-SDSSconnect/SDSSconnect/lib
-SDSSconnect/SDSSconnect/lib64
-SDSSconnect/SDSSconnect/models/*.egg
-SDSSconnect/SDSSconnect/models/*.egg-info
-SDSSconnect/SDSSconnect/models/*.mo
-SDSSconnect/SDSSconnect/models/*.so
-SDSSconnect/SDSSconnect/models/*.sublime*
-SDSSconnect/SDSSconnect/models/.bak
-SDSSconnect/SDSSconnect/models/.coverage
-SDSSconnect/SDSSconnect/models/.installed.cfg
-SDSSconnect/SDSSconnect/models/.mr.developer.cfg
-SDSSconnect/SDSSconnect/models/.project
-SDSSconnect/SDSSconnect/models/.py[cod]
-SDSSconnect/SDSSconnect/models/.pydevproject
-SDSSconnect/SDSSconnect/models/.tox
-SDSSconnect/SDSSconnect/models/__pycache__
-SDSSconnect/SDSSconnect/models/build
-SDSSconnect/SDSSconnect/models/develop-eggs
-SDSSconnect/SDSSconnect/models/dist
-SDSSconnect/SDSSconnect/models/eggs
-SDSSconnect/SDSSconnect/models/lib
-SDSSconnect/SDSSconnect/models/lib64
-SDSSconnect/SDSSconnect/models/nosetests.xml
-SDSSconnect/SDSSconnect/models/parts
-SDSSconnect/SDSSconnect/models/pip-log.txt
-SDSSconnect/SDSSconnect/models/sdist
-SDSSconnect/SDSSconnect/models/var
-SDSSconnect/SDSSconnect/nosetests.xml
-SDSSconnect/SDSSconnect/parts
-SDSSconnect/SDSSconnect/pip-log.txt
-SDSSconnect/SDSSconnect/sdist
-SDSSconnect/SDSSconnect/tests/*.egg
-SDSSconnect/SDSSconnect/tests/*.egg-info
-SDSSconnect/SDSSconnect/tests/*.mo
-SDSSconnect/SDSSconnect/tests/*.so
-SDSSconnect/SDSSconnect/tests/*.sublime*
-SDSSconnect/SDSSconnect/tests/.bak
-SDSSconnect/SDSSconnect/tests/.coverage
-SDSSconnect/SDSSconnect/tests/.installed.cfg
-SDSSconnect/SDSSconnect/tests/.mr.developer.cfg
-SDSSconnect/SDSSconnect/tests/.project
-SDSSconnect/SDSSconnect/tests/.py[cod]
-SDSSconnect/SDSSconnect/tests/.pydevproject
-SDSSconnect/SDSSconnect/tests/.tox
-SDSSconnect/SDSSconnect/tests/__pycache__
-SDSSconnect/SDSSconnect/tests/build
-SDSSconnect/SDSSconnect/tests/develop-eggs
-SDSSconnect/SDSSconnect/tests/dist
-SDSSconnect/SDSSconnect/tests/eggs
-SDSSconnect/SDSSconnect/tests/lib
-SDSSconnect/SDSSconnect/tests/lib64
-SDSSconnect/SDSSconnect/tests/nosetests.xml
-SDSSconnect/SDSSconnect/tests/parts
-SDSSconnect/SDSSconnect/tests/pip-log.txt
-SDSSconnect/SDSSconnect/tests/sdist
-SDSSconnect/SDSSconnect/tests/var
-SDSSconnect/SDSSconnect/var
 SDSSconnect/__pycache__
 SDSSconnect/build
 SDSSconnect/develop-eggs
 SDSSconnect/dist
 SDSSconnect/eggs
+SDSSconnect/etc/*.egg
+SDSSconnect/etc/*.egg-info
+SDSSconnect/etc/*.mo
+SDSSconnect/etc/*.so
+SDSSconnect/etc/*.sublime*
+SDSSconnect/etc/.bak
+SDSSconnect/etc/.coverage
+SDSSconnect/etc/.installed.cfg
+SDSSconnect/etc/.mr.developer.cfg
+SDSSconnect/etc/.project
+SDSSconnect/etc/.py[cod]
+SDSSconnect/etc/.pydevproject
+SDSSconnect/etc/.tox
+SDSSconnect/etc/__pycache__
+SDSSconnect/etc/build
+SDSSconnect/etc/develop-eggs
+SDSSconnect/etc/dist
+SDSSconnect/etc/eggs
+SDSSconnect/etc/lib
+SDSSconnect/etc/lib64
+SDSSconnect/etc/nosetests.xml
+SDSSconnect/etc/parts
+SDSSconnect/etc/pip-log.txt
+SDSSconnect/etc/sdist
+SDSSconnect/etc/var
 SDSSconnect/lib
 SDSSconnect/lib64
+SDSSconnect/models/*.egg
+SDSSconnect/models/*.egg-info
+SDSSconnect/models/*.mo
+SDSSconnect/models/*.so
+SDSSconnect/models/*.sublime*
+SDSSconnect/models/.bak
+SDSSconnect/models/.coverage
+SDSSconnect/models/.installed.cfg
+SDSSconnect/models/.mr.developer.cfg
+SDSSconnect/models/.project
+SDSSconnect/models/.py[cod]
+SDSSconnect/models/.pydevproject
+SDSSconnect/models/.tox
+SDSSconnect/models/__pycache__
+SDSSconnect/models/build
+SDSSconnect/models/develop-eggs
+SDSSconnect/models/dist
+SDSSconnect/models/eggs
+SDSSconnect/models/lib
+SDSSconnect/models/lib64
+SDSSconnect/models/nosetests.xml
+SDSSconnect/models/parts
+SDSSconnect/models/pip-log.txt
+SDSSconnect/models/sdist
+SDSSconnect/models/var
 SDSSconnect/nosetests.xml
 SDSSconnect/parts
 SDSSconnect/pip-log.txt
 SDSSconnect/sdist
+SDSSconnect/tests/*.egg
+SDSSconnect/tests/*.egg-info
+SDSSconnect/tests/*.mo
+SDSSconnect/tests/*.so
+SDSSconnect/tests/*.sublime*
+SDSSconnect/tests/.bak
+SDSSconnect/tests/.coverage
+SDSSconnect/tests/.installed.cfg
+SDSSconnect/tests/.mr.developer.cfg
+SDSSconnect/tests/.project
+SDSSconnect/tests/.py[cod]
+SDSSconnect/tests/.pydevproject
+SDSSconnect/tests/.tox
+SDSSconnect/tests/__pycache__
+SDSSconnect/tests/build
+SDSSconnect/tests/develop-eggs
+SDSSconnect/tests/dist
+SDSSconnect/tests/eggs
+SDSSconnect/tests/lib
+SDSSconnect/tests/lib64
+SDSSconnect/tests/nosetests.xml
+SDSSconnect/tests/parts
+SDSSconnect/tests/pip-log.txt
+SDSSconnect/tests/sdist
+SDSSconnect/tests/var
 SDSSconnect/var
 Totoro/*.egg
 Totoro/*.egg-info
