--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,16 @@
 * text=auto !eol
 /README.md -text
+SDSSconnect/DatabaseConnection.py -text
 SDSSconnect/LICENSE -text
 SDSSconnect/README.md -text
-SDSSconnect/SDSSconnect/DatabaseConnection.py -text
-SDSSconnect/SDSSconnect/__init__.py -text
-SDSSconnect/SDSSconnect/etc/repr.dat -text
-SDSSconnect/SDSSconnect/exceptions.py -text
-SDSSconnect/SDSSconnect/models/__init__.py -text
-SDSSconnect/SDSSconnect/models/relationships.py -text
-SDSSconnect/SDSSconnect/models/utils.py -text
-SDSSconnect/SDSSconnect/tests/__init__.py -text
-SDSSconnect/SDSSconnect/tests/test_DatabaseConnect.py -text
+SDSSconnect/__init__.py -text
+SDSSconnect/etc/repr.dat -text
+SDSSconnect/exceptions.py -text
+SDSSconnect/models/__init__.py -text
+SDSSconnect/models/relationships.py -text
+SDSSconnect/models/utils.py -text
+SDSSconnect/tests/__init__.py -text
+SDSSconnect/tests/test_DatabaseConnect.py -text
 Totoro/__init__.py -text
 Totoro/bin/__init__.py -text
 Totoro/bin/autoAssignPlatePriorities.py -text
