added module file

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,31 @@ SDSSconnect/var
 /develop-eggs
 /dist
 /eggs
+etc/*.egg
+etc/*.egg-info
+etc/*.mo
+etc/*.so
+etc/*.sublime*
+etc/.bak
+etc/.coverage
+etc/.installed.cfg
+etc/.mr.developer.cfg
+etc/.project
+etc/.py[cod]
+etc/.pydevproject
+etc/.tox
+etc/__pycache__
+etc/build
+etc/develop-eggs
+etc/dist
+etc/eggs
+etc/lib
+etc/lib64
+etc/nosetests.xml
+etc/parts
+etc/pip-log.txt
+etc/sdist
+etc/var
 /lib
 /lib64
 /nosetests.xml
