--- a/Totoro/defaults.yaml
+++ b/Totoro/defaults.yaml
@@ -119,13 +119,13 @@ set:
     maxHARange: 15.
     maxSeeingRange: 0.8
     maxSN2Factor: 2
-    setRearrangementFactor: 0.9
     ditherPositions: ['N', 'S', 'E']
 
 setArrangement:
     permutationLimitPlate: 600000
     permutationLimitIncomplete: 14400
     forceRearrangementMinExposures: 3
+    factor: 0.9
 
 mangaCarts: [1, 2, 3, 4, 5, 6]
 offlineCarts: []
