implemented initial buffer in plugger. Fixed tests.

--- a/Totoro/defaults.yaml
+++ b/Totoro/defaults.yaml
@@ -87,6 +87,7 @@ plugger:
     maxAltitude: 85
     minSchedulingTimeHours: 0.75
     onlyVisiblePlates: true
+    initialBufferMin: 15.
     simulationFactor: 1.05
 
 simulation:
