--- a/.gitattributes
+++ b/.gitattributes
@@ -52,4 +52,5 @@ Totoro/tests/testSets.py -text
 Totoro/utils/__init__.py -text
 Totoro/utils/intervals.py -text
 Totoro/utils/utils.py -text
+etc/config.ini -text
 ups/Totoro.table -text
