--- a/Totoro/defaults.yaml
+++ b/Totoro/defaults.yaml
@@ -147,6 +147,7 @@ specialPrograms:
         complete_with_n_sets: 2
         exposure_time: 600
         min_exposure_time: 599
+        lst_range: [4, 5.5]
 
 mangaCarts: [5, 4, 6, 3, 1, 2]
 offlineCarts: []
